// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<DocumentFragment>
  <script
    class="structured_data"
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@type":"HowTo","steps":[{"@type":"HowToStep","text":"Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.To learn more, see Connect to MongoDB","name":"Connect to your deployment"},{"@type":"HowToStep","text":"Import data from CSV or JSON files into your MongoDB database.To learn more, see Import and Export Data","name":"Import your data"}],"name":"Connect to a MongoDB deployment hosted on MongoDB Atlas","image":"https://webimages.mongodb.com/_com_assets/cms/kuyj2focmkbxv7gh3-stacked_default_slate_blue.svg?auto=format%252Ccompress"}
  </script>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-1 {
  position: relative;
  gap: 33px;
}

.emotion-1 h2,
.emotion-1 h3,
.emotion-1 h4 {
  margin-top: 4px;
}

.emotion-1:not(:last-child):before {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
}

.dark-theme .emotion-1:not(:last-child):before {
  border-left-color: #5C6C75;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  position: relative;
  min-height: 59px;
}

.emotion-4 {
  position: relative;
  font-weight: bold;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.dark-theme .emotion-4 {
  background-color: #00684A;
  color: #E8EDEB;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-6 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-6 {
    padding-bottom: 32px;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        Mock ContentMock Content
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          2
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        Mock ContentMock Content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders steps nested in include nodes 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-1 {
  position: relative;
  gap: 33px;
}

.emotion-1 h2,
.emotion-1 h3,
.emotion-1 h4 {
  margin-top: 4px;
}

.emotion-1:not(:last-child):before {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
}

.dark-theme .emotion-1:not(:last-child):before {
  border-left-color: #5C6C75;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  position: relative;
  min-height: 59px;
}

.emotion-4 {
  position: relative;
  font-weight: bold;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.dark-theme .emotion-4 {
  background-color: #00684A;
  color: #E8EDEB;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-6 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-6 {
    padding-bottom: 32px;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        Mock Content
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          2
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        Mock Content
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          3
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        Mock Content
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          4
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        Mock Content
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          5
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        Mock Content
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          6
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        Mock Content
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          7
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        Mock Content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders with "normal" or YAML steps styling 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

.emotion-1 {
  gap: 16px;
}

.emotion-1 h2,
.emotion-1 h4,
.emotion-1 h5,
.emotion-1 h6 {
  margin-top: unset;
}

.emotion-1 h3 {
  margin-top: 2px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  position: relative;
  min-height: 59px;
}

.emotion-4 {
  border: 1.5px solid #C1C7C6;
  font-weight: 500;
  font-size: 16px;
  line-height: 28px;
  background-color: inherit;
  color: var(--opposite-color);
  height: 27px;
  width: 27px;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 section>*,
.emotion-6 ol p,
.emotion-6 ul p {
  margin-bottom: 16px;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        Mock ContentMock Content
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          2
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        Mock ContentMock Content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
